--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/parser": "^8.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.4.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
